--- a/SauceDemo3/SauceDemo3.csproj
+++ b/SauceDemo3/SauceDemo3.csproj
@@ -56,6 +56,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DetailPageObject.cs" />
     <Compile Include="LoginPageObject.cs" />
     <Compile Include="MainPageObject.cs" />
     <Compile Include="SauceLogin.cs" />
